# information_systems_project

./: .gitignore  Dockerfile  README.md  compose.yml  env.template  populate.py  pyproject.toml  review_database.py  setup.sh  test_text_to_sql.py
app/: __init__.py  config.py  database.py  main.py
app/llm/: __init__.py  gpt.py  tinyllama.py
app/routers/: health.py  text_to_sql.py
