[project]
name = "llmsql2"
version = "0.1.0"
description = "Text-to-SQL comparison project: GPT, TinyLlama, SQLite, PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "aiofiles>=23.2.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
